correction scrollbar css

--- a/css/main.css
+++ b/css/main.css
@@ -309,20 +309,25 @@ nav .icon-burger .line {
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
+    overflow-x: hidden;
+    padding-right: 5px;
 }
+
+/* scroll bar */
 ::-webkit-scrollbar{
-    width: 8px;
+    width: 6px;
 }
 ::-webkit-scrollbar-track{
-    border:7px solid #626264;
+    /* border: 7px solid #4F646F; */
     box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.3);
 }
 ::-webkit-scrollbar-thumb{
-    background: linear-gradient(
+    /* background: linear-gradient(
         45deg,
-        #bed17b,
+        #511730,
         #C3979F
-    );
+    ); */ 
+    background: #4F646F;
     border-radius: 3px;
 }
     
@@ -701,6 +706,7 @@ tbody {
     }
     .description{
         font-size: 0.9em;
+        overflow-y: auto;
     }
     .description div:last-of-type {
         margin-top: 16px;
@@ -794,29 +800,6 @@ tbody {
     }
     .tuile{
         height: 225px;
-    }
-    /*
-    .description{
-        overflow-y: auto;
-        overflow-x: hidden;
-    }*/
-    .description{
-        overflow-y: auto;
-    }
-    ::-webkit-scrollbar{
-        width: 8px;
-    }
-    ::-webkit-scrollbar-track{
-        border:7px solid #626264;
-        box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.3);
-    }
-    ::-webkit-scrollbar-thumb{
-        background: linear-gradient(
-            45deg,
-            #bed17b,
-            #C3979F
-        );
-        border-radius: 3px;
     }
     span{
         font-size: 1em;
